<resources>
    <string name="app_name">theScoreAssignment</string>
    <string name="team_logo">Logo</string>
    <string name="team_name">Team name</string>
    <string name="wins">Wins</string>
    <string name="losses">Loss</string>
    <string name="action_settings">Settings</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_win">Sort by wins</string>
    <string name="sort_by_lose">Sort by losses</string>
    <string name="player_name">Player Full Name</string>
    <string name="player_no">No</string>
    <string name="player_position">Pos</string>
    <string name="teams">Teams</string>
    <string name="team_detail">Team Detail</string>
    <string name="no_team">Not any team registerd for this season</string>
</resources>
