<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    app:layout_constraintHorizontal_chainStyle="spread_inside">

    <TextView
        android:id="@+id/txt_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/team_logo"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_name"
        app:layout_constraintHorizontal_weight="0.15"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/team_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_win"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_logo" />


    <TextView
        android:id="@+id/txt_win"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/wins"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_lose"
        app:layout_constraintHorizontal_weight="0.15"
        app:layout_constraintStart_toEndOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_lose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/losses"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.15"
        app:layout_constraintStart_toEndOf="@+id/txt_win" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorDarkGray"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

</android.support.constraint.ConstraintLayout>