<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    app:layout_constraintHorizontal_chainStyle="spread_inside">

    <ImageView
        android:id="@+id/img_team_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />


    <TextView
        android:id="@+id/txt_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="sdsdsdsdsdsdsd"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/img_team_logo"
        app:layout_constraintHorizontal_weight="0.2"
        app:layout_constraintStart_toEndOf="@+id/img_team_logo"
        app:layout_constraintTop_toTopOf="@+id/img_team_logo"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/txt_win_lose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="sdsdsdsdsdsdsd"
        android:textSize="16sp"
        app:layout_constraintHorizontal_weight="0.2"
        app:layout_constraintStart_toEndOf="@+id/img_team_logo"
        app:layout_constraintTop_toBottomOf="@+id/txt_team_name" />


    <View
        android:id="@+id/view_separate"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorDarkGray"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@+id/img_team_logo" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:text="@string/player_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_no"
        app:layout_constraintHorizontal_weight="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_separate" />


    <TextView
        android:id="@+id/txt_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/player_no"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/txt_name"
        app:layout_constraintBottom_toBottomOf="@+id/txt_name"
        app:layout_constraintEnd_toStartOf="@+id/txt_positon"
        app:layout_constraintHorizontal_weight="0.2"
        app:layout_constraintStart_toEndOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_positon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:text="@string/player_position"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/txt_no"
        app:layout_constraintBottom_toBottomOf="@+id/txt_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.2"
        app:layout_constraintStart_toEndOf="@+id/txt_no" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_view_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

</android.support.constraint.ConstraintLayout>